client/src/index.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-family: "Montserrat", sans-serif;
}

body {
  background-color: #eee;
  background-image: url("https://www.transparenttextures.com/patterns/brilliant.png");
  padding: 0 16px 0 0;
}

header {
  background-color: #f5ba13;
  margin: auto -16px;
  padding: 16px 32px;
  box-shadow: 0 0 10px 0 rgba(156, 132, 132, 0.3);
  overflow: hidden;
}

header h1 {
  color: #fff;
  font-family: "McLaren", cursive;
  font-weight: 200;
  padding: 2px 2px 2px 2px;
}

header .topnav-right {
  font-family: "McLaren", cursive;
  font-weight: 200;
  float: right;
  border-color: #fff;
  border-width: thick;
  background-color: #f5ba13;
  padding: 0px 10px 0px 10px;
}

header .topnav-right .link {
  color: #fff;
  text-decoration: none;
}

header .topnav-outer {
  background-color: white;
  padding: 2px 2px 2px 2px;
  float: right;
}

footer {
  position: absolute;
  text-align: center;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
}

footer p {
  color: #ccc;
}

.note {
  background: #fff;
  border-radius: 7px;
  box-shadow: 0 2px 5px #ccc;
  padding: 10px;
  width: 240px;
  margin: 16px;
  float: left;
}

.note h1 {
  font-size: 1.1em;
  margin-bottom: 6px;
}

.note p {
  font-size: 1.1em;
  margin-bottom: 10px;
  white-space: pre-wrap;
  word-wrap: break-word;
}

.note button {
  position: relative;
  float: right;
  margin-right: 10px;
  color: #f5ba13;
  border: none;
  width: 36px;
  height: 36px;
  cursor: pointer;
  outline: none;
}

form.create-note {
  position: relative;
  width: 480px;
  margin: 180px auto 20px auto;
  background: #fff;
  padding: 15px;
  border-radius: 7px;
  box-shadow: 0 1px 5px rgb(138, 137, 137);
}

form.create-note input,
form.create-note textarea {
  width: 100%;
  border: none;
  padding: 4px;
  outline: none;
  font-size: 1.2em;
  font-family: inherit;
  resize: none;
}

form.create-note button {
  position: absolute;
  right: 18px;
  bottom: -18px;
  background: #f5ba13;
  color: #fff;
  border: none;
  border-radius: 50%;
  width: 36px;
  height: 36px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
  cursor: pointer;
  outline: none;
}

form.login {
  position: relative;
  width: 480px;
  margin: 180px auto 20px auto;
  background: #fff;
  padding: 15px;
  border-radius: 7px;
  box-shadow: 0 1px 5px rgb(138, 137, 137);
}

form.login a {
  text-decoration: none;
  color: #f5ba13;
}

form.login input,
form.login textarea {
  width: 100%;
  border: none;
  padding: 20px;
  outline: none;
  font-size: 1.2em;
  font-family: inherit;
  resize: none;
}

form.login button {
  position: absolute;
  right: 18px;
  bottom: -30px;
  background: #f5ba13;
  color: #fff;
  border: none;
  border-radius: 50%;
  width: 66px;
  height: 66px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
  cursor: pointer;
  outline: none;
}

form.login {
  text-align: center;
  word-wrap: break-word;
}

.welcome {
  position: absolute;
  right: 30%;
  bottom: 75%;
  word-wrap: break-word;
  margin-top: 5px;
}

.saveFab {
  top: auto;
  right: 30px;
  bottom: 20px;
  left: 20 px;
  position: absolute;
}

